[gd_scene load_steps=15 format=2]

[ext_resource path="res://HUD/ProgressBar.gd" type="Script" id=1]
[ext_resource path="res://HUD/Panel.gd" type="Script" id=3]
[ext_resource path="res://HUD/HealthBar.gd" type="Script" id=4]
[ext_resource path="res://assets/Fonts/m5x7.ttf" type="DynamicFontData" id=5]

[sub_resource type="Theme" id=2]

[sub_resource type="StyleBoxFlat" id=3]
bg_color = Color( 0.14902, 0.501961, 0.219608, 1 )
border_width_left = 3
border_width_top = 3
border_width_right = 3
border_width_bottom = 3
border_color = Color( 1, 1, 1, 1 )
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[sub_resource type="StyleBoxFlat" id=4]
bg_color = Color( 0.0784314, 0.309804, 0.0117647, 1 )
border_width_left = 3
border_width_top = 3
border_width_right = 3
border_width_bottom = 3
border_color = Color( 1, 1, 1, 1 )
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[sub_resource type="DynamicFont" id=8]
size = 70
font_data = ExtResource( 5 )

[sub_resource type="DynamicFont" id=11]
size = 160
font_data = ExtResource( 5 )

[sub_resource type="DynamicFont" id=10]
size = 224
font_data = ExtResource( 5 )

[sub_resource type="Theme" id=5]

[sub_resource type="DynamicFont" id=9]
size = 64
font_data = ExtResource( 5 )

[sub_resource type="StyleBoxFlat" id=6]
bg_color = Color( 1, 0, 0, 1 )
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[sub_resource type="StyleBoxFlat" id=7]
bg_color = Color( 0, 0, 0, 1 )
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[node name="Panel" type="Panel"]
margin_left = -8.0
margin_top = -80.0
margin_right = 2063.0
margin_bottom = 4.0
script = ExtResource( 3 )

[node name="ProgressBar" type="ProgressBar" parent="."]
light_mask = 0
margin_left = 266.0
margin_top = 10.0
margin_right = 532.0
margin_bottom = 64.0
theme = SubResource( 2 )
custom_styles/fg = SubResource( 3 )
custom_styles/bg = SubResource( 4 )
percent_visible = false
script = ExtResource( 1 )

[node name="TimeLeft" type="Timer" parent="."]
wait_time = 100.0
autostart = true

[node name="TimeLabel" type="Label" parent="."]
margin_left = 800.0
margin_top = -2.0
margin_right = 1012.0
margin_bottom = 79.0
custom_fonts/font = SubResource( 8 )
align = 1
valign = 1

[node name="Button" type="Button" parent="."]
pause_mode = 2
margin_left = 680.0
margin_top = 697.0
margin_right = 1392.0
margin_bottom = 834.0
custom_fonts/font = SubResource( 11 )
text = "    RETRY    "
__meta__ = {
"_editor_description_": ""
}

[node name="Label" type="Label" parent="Button"]
margin_left = 10.0
margin_top = -248.0
margin_right = 710.0
margin_bottom = -70.0
custom_fonts/font = SubResource( 10 )
text = "PERDISTE"
align = 1
valign = 1

[node name="HealthBar" type="ProgressBar" parent="."]
margin_left = 1544.0
margin_top = 13.0
margin_right = 1810.0
margin_bottom = 67.0
theme = SubResource( 5 )
custom_fonts/font = SubResource( 9 )
custom_styles/fg = SubResource( 6 )
custom_styles/bg = SubResource( 7 )
value = 100.0
script = ExtResource( 4 )

[connection signal="timeout" from="TimeLeft" to="." method="_on_TimeLeft_timeout"]
[connection signal="pressed" from="Button" to="." method="_on_Button_pressed"]
